# sigrok-androidutils

./: .gitignore  AndroidManifest.xml.in  Makefile.am  autogen.sh  build.xml  configure.ac  device_filter.xml
ant/resources/: anttasks.properties
ant/src/org/sigrok/androidutils/ant/: CopyLibsTask.java  ElfFile.java
lib/: Makefile.am  envsetup.cpp  jvm_glue.cpp  libsigrokandroidutils-internal.h  libsigrokandroidutils.h  libsigrokandroidutils.pc.in
src/org/sigrok/androidutils/: Environment.java  SigrokApplication.java  UsbEventListener.java  UsbEventListenerStub.java  UsbEventMonitor.java  UsbHelper.java  UsbSupplicant.java
